--- a/src/App.css
+++ b/src/App.css
@@ -1,4 +1,8 @@
 .App {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: -moz-box;
+  display: -webkit-flex; 
   display: flex;
   width: 100%;
   height: 100%;
