--- a/src/components/css/Header.css
+++ b/src/components/css/Header.css
@@ -1,4 +1,8 @@
 .container {
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: -moz-box;
+    display: -webkit-flex; 
     display: flex;
     width: 100%;
     align-items: center;
@@ -7,11 +11,23 @@
     text-align: center;
 }
 
+.textcontainer {
+    position: absolute;
+    font-family: 'Reenie Beanie', sans-serif;
+}
+
 .name {
     font-weight: lighter;
-    font-size: 3em;
+    font-size: 4.4em;
     color: white;
-    position: absolute;
+    padding: 0;
+    margin: 0;
+}
+
+.title {
+    font-weight: lighter;
+    font-size: 1.5em;
+    color: white;
     padding: 0;
     margin: 0;
 }
