--- a/src/index.css
+++ b/src/index.css
@@ -2,4 +2,14 @@ body {
   margin: 0;
   padding: 0;
   font-family: 'Roboto', sans-serif;
+  background-color: rgba(0,0,0,0.9);
+}
+
+a, u {
+    text-decoration: none;
+    transition: 0.3s;
+}
+
+a:hover {
+    opacity: 0.4;
 }
