--- a/src/components/css/Section.css
+++ b/src/components/css/Section.css
@@ -1,5 +1,9 @@
 .thiscontainer {
+    display: flex;
     margin: 20px;
+    flex-direction: row;
+    align-items: center;
+    justify-content: flex-start;
 }
 
 .contentContainer {
@@ -25,26 +29,28 @@
 }
 
 
-.title {
-    font-size: 20;
-
+.maintitle {
+    font-size: 20px;
+    margin: 0;
+    padding: 0;
 }
 
 .subtitle {
     color: rgba(255,255,255,0.8);
-    font-size: 20;
+    font-size: 16px;
     margin: 0;
     padding: 0;
 }
 
 .content {
+    font-size: 10px;
     padding: 0;
     margin: 0;
 }
 
 .time {
-    font-size: 12;
-    color: rgba(255,255,255,0.2);
+    font-size: 10px;
+    color: rgba(255,255,255,0.8);
     padding: 0;
-    margin: 0;
+    margin: 3px;
 }
