--- a/src/components/css/Header.css
+++ b/src/components/css/Header.css
@@ -1,19 +1,24 @@
 .container {
+    position: absolute;
+    top: 0;
+    bottom: 0;
+    left: 0;
+    right: 0;
     display: -webkit-box;
     display: -ms-flexbox;
     display: -moz-box;
     display: -webkit-flex; 
     display: flex;
-    width: 100%;
     align-items: center;
     justify-content: center;
     flex-direction: column;
     text-align: center;
+    overflow:hidden;
 }
 
 .textcontainer {
-    position: absolute;
     font-family: 'Reenie Beanie', sans-serif;
+    z-index: 10;
 }
 
 .name {
@@ -22,6 +27,12 @@
     color: white;
     padding: 0;
     margin: 0;
+}
+.video-js {
+  position: absolute !important;
+  opacity: 0.8;
+  z-index: 0 !important;
+  top: 0 !important;
 }
 
 .title {
