--- a/src/components/css/Section.css
+++ b/src/components/css/Section.css
@@ -1,4 +1,8 @@
 .thiscontainer {
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: -moz-box;
+    display: -webkit-flex; 
     display: flex;
     margin: 20px;
     flex-direction: row;
@@ -7,6 +11,10 @@
 }
 
 .contentContainer {
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: -moz-box;
+    display: -webkit-flex; 
     display: flex;
     color: white;
     justify-content: center;
@@ -14,6 +22,10 @@
 }
 
 .titleContainer {
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: -moz-box;
+    display: -webkit-flex; 
     display: flex;
     color: white;
     align-items: center;
@@ -21,6 +33,10 @@
 }
 
 .containerHell {
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: -moz-box;
+    display: -webkit-flex; 
     display: flex;
     align-items: center;
     flex-direction: column;
