--- a/src/components/css/Social.css
+++ b/src/components/css/Social.css
@@ -1,8 +1,12 @@
-.container {
+.soccontainer {
     display: -webkit-box;
     display: -ms-flexbox;
     display: -moz-box;
     display: -webkit-flex; 
     display: flex;
-    flex-direction: row;
+    width: 100%;
+    align-items: center;
+    justify-content: center;
+    flex-direction: column;
+    text-align: center;
 }
