--- a/src/components/css/Video.css
+++ b/src/components/css/Video.css
@@ -1,9 +1,11 @@
 .overlay {
-    width: 100%;
-    height: 100%;
-    position: absolute;
-    top: 0;
-    left: 0;
+    position: absolute !important;
+    top: 0 !important;
+    left: 0 !important;
+    right: 0 !important;
+    bottom: 0 !important;
+    background-color: black;
+    z-index: 20;
 }
 
 .fade-enter {
