--- a/src/components/css/Header.css
+++ b/src/components/css/Header.css
@@ -17,17 +17,21 @@
     background-color: black;
 }
 
-.page-bg {
+.bg {
     opacity: 0;
     position: fixed;
-    top: 0;
-    left: 0;
-    height: 100%;
-    width: 100%;
-    background-image: url('https://storage.googleapis.com/staging.tailor-1d71a.appspot.com/out1.gif');
+    height: 110%;
+    width: 110%;
+    background-image: url('https://storage.googleapis.com/staging.tailor-1d71a.appspot.com/out4.gif');
     background-position: center;
     background-size: 100% 100%;
     background-size: cover;
+
+    -webkit-filter: blur(15px);
+    -moz-filter: blur(15px);
+    -o-filter: blur(15px);
+    -ms-filter: blur(15px);
+    filter: blur(15px);
 
     animation-name: fadeIn;
     animation-iteration-count: 1;
